--- a/sass/components/_list.scss
+++ b/sass/components/_list.scss
@@ -1,10 +1,9 @@
 .list {
   background-color: map-get($map: $bg-menu, $key: 1);
   box-shadow: 0.5px 0.5px 8px rgb(214, 214, 214);
-  width: 40vh;
-  height: 73vh;
-  margin: auto;
-  margin-top: 0;
+  width: 75%;
+  height: 90%;
+  margin: 0 auto 2rem auto;
   padding-left: 2rem;
   padding-right: 2rem;
   &__header {
