--- a/sass/layouts/_sectionp.scss
+++ b/sass/layouts/_sectionp.scss
@@ -4,4 +4,5 @@
   justify-content: space-around;
   padding-left: 3vh;
   padding-right: 3vh;
+  margin-top: 1rem;
 }
