--- a/sass/pages/_acceuil.scss
+++ b/sass/pages/_acceuil.scss
@@ -5,5 +5,4 @@
 #soon {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
