--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -1,8 +1,8 @@
 #menu_header {
   h2 {
     text-align: center;
-    margin-top: 1.5rem;
-    margin-bottom: 0.7rem;
+    margin: 2rem auto 0.5rem auto;
+    width: 75%;
   }
 }
 
